# pompeu

./: LICENSE  README.md  package.json  pyproject.toml
analysis/: judgements_flat.csv  metrics_by_model.csv  summary.json
judgements/: -XSQhv9YN0EEUpyGpsAZ7.json  09YD6YPGCsMkRB2Du17of.json  0ONRzRcCEOTt3mX_eVg3H.json  1nh--6mBTB-uSqMRDKaXT.json  33g-PJdjIWmW5-Q8jwOiJ.json  3tb7gTO9Cn2kgV9v2u7n_.json  4jwK9COppVeKab-0CBHBz.json  4loX_YrvQgiNKNw12wv5p.json  5GieP2qfE4A3tR3bE9kzR.json  5WsIZNS5-ialr_5CcqFYo.json  7RT-DWYnB7L9aFTh0vzxr.json  892V2fsJSY43CdXcyG5vO.json  8DAY_VPYzVxjP42KhPD_f.json  8HYdV3Oy24YP-IIai7j3g.json  ADPPeNP_YK4gxIunqTlSn.json  Acn0vFMdeYX8RPMZABUw_.json  BYob3O3EYF5JswVUQCFR0.json  Bq4F1Y9I5GNHjjJw7ED__.json  DR-3REmxPivT8gSkAg4DU.json  EKc1O1iggUK_-HXmGpFqk.json  EqL03s2axfv0YtYGFkukE.json  Fdtmf5w0E__4VjZcHc7AV.json  G7mtkpLdGy9Ywxm-LUD3k.json  HqzJbvdwxq-y1a2KyDQBy.json  IiCAk5tcJcnDxx7xCeWoa.json  Jc_sDFskviX7NZR68DzI4.json  K4ecqcJlbrrTTWK4G4_OM.json  KTcv7w-P4--Azst7mP6Ov.json  KuIPOE5NU5j6m4KLp11H-.json  L2-YLLUECcp6OsGngHZpM.json  LaD74S2woMcXnAkEyW1CB.json  Nz8tXaaSDj4hpXN892PWk.json  OgqqZk9Ez0LBAH101tQKk.json  OoKzFPtWDr5aQ3VHQoPMe.json  Pmb9LeTHFfVYA0FPEZTaY.json  Q-18Dp7CUgpOkR3-WgmRu.json  QLwfkn3moGlZDw2m_GT8w.json  QX9Emm2MjHmDD2ZdTPaGs.json  RhPn6b5UQl5rvRshHq-R-.json  RxFtF_UI3stddGctm_g7c.json  (+56 more)
results/: -XSQhv9YN0EEUpyGpsAZ7.json  09YD6YPGCsMkRB2Du17of.json  0ONRzRcCEOTt3mX_eVg3H.json  1nh--6mBTB-uSqMRDKaXT.json  33g-PJdjIWmW5-Q8jwOiJ.json  3tb7gTO9Cn2kgV9v2u7n_.json  4jwK9COppVeKab-0CBHBz.json  4loX_YrvQgiNKNw12wv5p.json  (+88 more)
(+12 files in other folders)
